[workspace]
members = ["four-bar", "four-bar-ui"]
resolver = "2"

[workspace.package]
version = "6.1.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/KmolYuan/four-bar-rs"
keywords = ["mechanism", "simulation", "optimization"]
categories = ["algorithms"]

[workspace.lints.rust]
unsafe-code = "forbid"

[workspace.lints.clippy]
semicolon-if-nothing-returned = "warn"
