[workspace]
members = ["four-bar", "four-bar-ui"]
resolver = "2"

[workspace.package]
version = "7.0.1"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/KmolYuan/four-bar-rs"
keywords = ["mechanism", "simulation", "optimization"]
categories = ["algorithms"]

[workspace.lints.clippy]
semicolon-if-nothing-returned = "warn"
undocumented-unsafe-blocks = "warn"
unnecessary-safety-comment = "warn"
