[workspace]
members = ["four-bar", "four-bar-ui"]
resolver = "2"

[workspace.package]
authors = ["KmolYuan <pyslvs@gmail.com>"]
categories = ["algorithms"]
edition = "2021"
keywords = ["mechanism", "simulation", "optimization"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/KmolYuan/four-bar-rs"
version = "7.0.3"

[workspace.lints.clippy]
semicolon-if-nothing-returned = "warn"
undocumented-unsafe-blocks = "warn"
unnecessary-safety-comment = "warn"
