[package]
name = "four-bar-ui"
version = "3.0.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
description = "Four🍀bar GUI is a simulator, a synthesizing tool for four-bar linkage mechanism."
license = "AGPL-3.0-or-later"
readme = "../README.md"
repository = "https://github.com/KmolYuan/four-bar-rs"
keywords = ["mechanism", "simulation", "optimization"]
categories = ["algorithms"]

[[bin]]
name = "four-bar"
path = "src/main.rs"

[features]
default = ["native"]
native = ["four-bar/rayon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"
csv = "1"

[dependencies.four-bar]
version = "3"
path = "../four-bar"
features = ["serde", "codebook", "plot"]

[dependencies.eframe]
version = "0.19"
default-features = false
features = ["persistence", "glow", "dark-light"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# native here!
indicatif = { version = "0.17", features = ["improved_unicode"] }
clap = { version = "4", features = ["derive"] }
image = "0.24"
rfd = "0.10"
wild = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm here!
instant = { version = "0.1", features = ["stdweb"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
tracing-wasm = "0.2"

[target.'cfg(windows)'.dependencies]
# windows here!
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
image = "0.24"
winres = "0.1"
