[package]
name = "four-bar-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Four🍀bar GUI is a simulator, a synthesis tool for four-bar linkages."
readme = "../README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "four-bar"
path = "src/main.rs"

[features]
# Turn off the default "native" in WASM
# Turn on "native-win-release" to hide the console in Windows
default = ["native"]
native = ["four-bar/clap", "four-bar/rayon"]
native-win-release = ["winapi", "native"]

[dependencies]
smartcore = { version = "0.3", features = ["ndarray-bindings"] }
serde = { version = "1", features = ["derive"] }
egui_plot = "0.27"
rfd = "0.14"
ron = { git = "https://github.com/ron-rs/ron" }

[dependencies.four-bar]
version = "7"
path = "../four-bar"
features = ["csv", "atlas", "plot"]

[dependencies.eframe]
version = "0.27"
default-features = false
features = ["accesskit", "persistence", "glow"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["ico", "jpeg", "gif"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# native here!
indicatif = { version = "0.17", features = ["improved_unicode"] }
clap = { version = "4", features = ["derive"] }
wild = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm here!
instant = { version = "0.1", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
tracing-wasm = "0.2"

[target.'cfg(windows)'.dependencies]
# windows here!
winapi = { version = "0.3", features = ["wincon", "winuser"], optional = true }

[target.'cfg(windows)'.build-dependencies]
image = "0.25"
winres = "0.1"

[lints]
workspace = true
