[package]
name = "four-bar"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Four🍀bar library provides simulation and synthesis function for four-bar linkages."
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde", "mh/serde"]
csv = ["dep:csv", "serde"]
plot = ["plotters", "plotters-backend", "fmtastic"]
rayon = ["mh/rayon"]
clap = ["dep:clap", "mh/clap"]
atlas = ["ndarray", "ndarray-npy"]

[dependencies]
ndarray = { version = "0.15", features = ["rayon"], optional = true }
ndarray-npy = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
plotters = { version = "0.3", optional = true }
plotters-backend = { version = "0.3", optional = true }
fmtastic = { version = "0.2", optional = true }
clap = { version = "4", optional = true }
csv = { version = "1", optional = true }
mh = { version = "10.0.2", package = "metaheuristics-nature" }
efd = "9.1"

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
