[package]
authors.workspace = true
categories.workspace = true
description = "Four🍀bar library provides simulation and synthesis function for four-bar linkages."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "four-bar"
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
atlas = ["ndarray", "ndarray-npy"]
clap = ["dep:clap", "mh/clap"]
csv = ["dep:csv", "serde"]
default = []
plot = ["plotters", "plotters-backend", "fmtastic"]
rayon = ["mh/rayon"]
serde = ["dep:serde", "mh/serde"]

[dependencies]
clap = { version = "4", optional = true }
csv = { version = "1", optional = true }
efd = "10.1"
fmtastic = { version = "0.2", optional = true }
mh = { version = "10.1", package = "metaheuristics-nature" }
ndarray = { version = "0.15", features = ["rayon"], optional = true }
ndarray-npy = { version = "0.8", optional = true }
plotters = { version = "0.3", optional = true }
plotters-backend = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
